--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ edition = "2018"
 # indexmap = "=1.3.2"
 
 # # 正規表現
-# regex = "=1.3.6"
+regex = "=1.3.6"
 
 # # staticアイテムの遅延初期化
 # lazy_static = "=1.4.0"
