--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,11 +43,11 @@ edition = "2018"
 # rand_hc = "=0.2.0"
 # rand_pcg = "=0.2.1"
 
-# # 乱数の分布の追加
+# # 乱数の分布の追加表現
 # rand_distr = "=0.2.2"
 
 # # グラフ
-# petgraph = "=0.5.0"
+petgraph = "=0.5.0"
 
 # # 挿入順を保持するhash table
 # indexmap = "=1.3.2"
