--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ regex = "=1.3.6"
 # superslice = "=1.0.0"
 
 # # イテレータの拡張
-# itertools = "=0.9.0"
+itertools = "=0.9.0"
 
 # # イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
 # itertools-num = "=0.1.3"
