--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,15 +93,4 @@ itertools = "=0.9.0"
 
 # 競技プログラミングの入出力サポートその1
 proconio = { version = "=0.3.6", features = ["derive"] }
-
-# 競技プログラミングの入出力サポートその2
-# text_io = "=0.1.8"
-
-# # 競技プログラミングの入出力サポートその3
-# whiteread = "=0.5.0"
-
-# # 高速なハッシュ関数
-# rustc-hash = "=1.1.0"
-
-# # ある長さまでは要素を「直に」持つ可変長配列
-# smallvec = "=1.2.0"
+ac-library-rs = "0.1.1"
